<resources>
    <string name="app_name">MADProject</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="username">UserName</string>
    <string name="user">Discover Users</string>
    <string name="trips">My Trips</string>
    <string name="createtrip">Create New Trip</string>
    <string name="otherusertrips">View Trips</string>
    <string name="emailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="signInWithEmailPassword">Sign in with email</string>
    <string name="Or">Or</string>
    <string name="signUp">sign up</string>
    <string name="name">Name</string>
    <string name="signupLabel">Sign up</string>
    <string name="confrimPasswordLabel">Confirm Password</string>
    <string name="confirmPassword">Confrim Password</string>
    <string name="cancelLabel">Cancel</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dashboard">Dashboard</string>
    <string name="editMyProfile">Edit My Profile</string>
    <string name="logout">Logout</string>
    <string name="createTripTitle">Title</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="createtripbut">Create Trip</string>
    <string name="tripTitle">Trip Title</string>
    <string name="createdBy">Created By</string>
    <string name="creatorEmail">Creator Email</string>
    <string name="viewTripDetails">View Details</string>
    <string name="joinTrip">Join Trip</string>
    <string name="removeTrip">Remove Trip</string>
    <string name="enterChatRoom">Enter Chat Room</string>
    <string name="chat">Chat</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="editTrip">Edit Trip</string>
</resources>
